fix horizontal scrollbar on title screen

--- a/css/style.css
+++ b/css/style.css
@@ -79,16 +79,17 @@ audio {
 	margin-right: 15px;
 }
 
-.pre-start-text {
+#pre-start-text {
 	color: #FF7E00;
-	position: absolute; /* taken out of the normal flow of the document */
-	top: 50%; /* moved down by 50% of the screen height */
-	transform: translateY(-50%); /* moved back up (Y axis) by half of its height to achieve the perfect center */
-	width: 100%; /* needs to be defined to keep the default block behavior */
-	text-align: center;
-	margin: 0; /* again, for perfect center */
 	font-size: 128px;
-	font-weight: bold;	
+	font-weight: bold;
+	display: none;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 1200px;
+	text-align: center;
 }
 
 .answer-text {
@@ -147,10 +148,6 @@ audio {
 .answer-wrapper {
 	table-layout: fixed;
 	width: 100%;
-}
-
-#pre-start {
-	display: none;
 }
 
 #pre-pre-start {
